[gd_scene load_steps=33 format=3 uid="uid://bsabnbioyq1vi"]

[ext_resource type="Script" path="res://scripts/musical_buttons.gd" id="1_8uvff"]
[ext_resource type="Texture2D" uid="uid://bjvf54w77457x" path="res://images/UI/stage_music.jpg" id="2_ujgd3"]
[ext_resource type="Script" path="res://scripts/pitch_slider.gd" id="2_xc8w2"]
[ext_resource type="PackedScene" uid="uid://2nt7cbp5akwy" path="res://scripts/volume_sliders.tscn" id="3_cwv5s"]
[ext_resource type="Texture2D" uid="uid://ci5fa4fvn5jhw" path="res://images/UI/cats_on_stage.png" id="3_sbqic"]
[ext_resource type="Texture2D" uid="uid://dmsa536y8rm0u" path="res://images/cats/idle_grey.png" id="4_kab1q"]
[ext_resource type="Texture2D" uid="uid://bawi1667np4im" path="res://images/cats/idle_black.png" id="4_otpif"]
[ext_resource type="Texture2D" uid="uid://1segxmi8w1nl" path="res://images/cats/idle_orange.png" id="5_mfk3a"]
[ext_resource type="Texture2D" uid="uid://bqqn7kjo567v4" path="res://images/UI/yellow_button.png" id="6_27t7a"]
[ext_resource type="Texture2D" uid="uid://cijosbbvmc651" path="res://images/cats/idle_white.png" id="7_1umda"]
[ext_resource type="Texture2D" uid="uid://cew3qwu765jx4" path="res://images/UI/green_button.png" id="8_mk6tg"]
[ext_resource type="Texture2D" uid="uid://5ophggkvh1a1" path="res://images/UI/red_button.png" id="10_nwdit"]
[ext_resource type="AudioStream" uid="uid://bym5io43mynb6" path="res://audio/meow_2.wav" id="10_qpjmc"]
[ext_resource type="Texture2D" uid="uid://d3yl3s0oxkqrh" path="res://images/UI/drum_button.png" id="13_or1yy"]
[ext_resource type="AudioStream" uid="uid://ciste6b2rag1q" path="res://audio/meow_3.wav" id="13_ys8fg"]
[ext_resource type="Script" path="res://scripts/drum_looper.gd" id="14_xm7xh"]
[ext_resource type="AudioStream" uid="uid://bemekoramm5wp" path="res://audio/meow_4.wav" id="15_nncfx"]
[ext_resource type="Texture2D" uid="uid://diofmuetlxv1v" path="res://images/UI/exit_button.png" id="19_026g5"]
[ext_resource type="AudioStream" uid="uid://cerjidrxh8umm" path="res://audio/hihat-analog.wav" id="19_rb2xc"]
[ext_resource type="AudioStream" uid="uid://txetqb060ocs" path="res://audio/snare-dist01.wav" id="20_dxcxc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cf6ei"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq3h8"]
bg_color = Color(0.0431373, 0.0352941, 0.180392, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.0431373, 0.0352941, 0.180392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27iny"]
bg_color = Color(0.796078, 0.8, 0.172549, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.796078, 0.8, 0.172549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufxda"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqrya"]
bg_color = Color(0.972549, 0.6, 0.109804, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.972549, 0.6, 0.109804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3qhf"]
bg_color = Color(0.227451, 0.658824, 0.286275, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.227451, 0.658824, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iy1jm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q68uh"]
bg_color = Color(0.870588, 0.87451, 0.878431, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.870588, 0.87451, 0.878431, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_reslu"]
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.933333, 0.129412, 0.27451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0alnu"]
bg_color = Color(0.501961, 0.509804, 0.521569, 1)
border_width_top = 10
border_width_bottom = 10
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fvql7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqbg4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8uvff")

[node name="pitch_slider" type="Node2D" parent="."]
script = ExtResource("2_xc8w2")

[node name="background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_ujgd3")

[node name="cats_idle" type="TextureRect" parent="."]
visible = false
offset_left = 104.0
offset_top = 24.0
offset_right = 2024.0
offset_bottom = 1104.0
texture = ExtResource("3_sbqic")

[node name="black_cat" type="Sprite2D" parent="."]
position = Vector2(1072, 574)
texture = ExtResource("4_otpif")

[node name="orange_cat" type="Sprite2D" parent="."]
position = Vector2(1030, 566)
texture = ExtResource("5_mfk3a")

[node name="grey_cat" type="Sprite2D" parent="."]
visible = false
position = Vector2(1070, 540)
texture = ExtResource("4_kab1q")

[node name="white_cat" type="Sprite2D" parent="."]
position = Vector2(1064, 548)
texture = ExtResource("7_1umda")

[node name="cat_2" type="Button" parent="."]
offset_left = 362.0
offset_top = 888.0
offset_right = 791.0
offset_bottom = 1031.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cf6ei")
icon = ExtResource("6_27t7a")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="cat_2"]
stream = ExtResource("10_qpjmc")
bus = &"volume_2"

[node name="HSlider" parent="cat_2" instance=ExtResource("3_cwv5s")]
layout_mode = 0
offset_left = 282.0
offset_top = -106.0
offset_right = 527.0
offset_bottom = -79.0
rotation = -1.5708
theme_override_styles/slider = SubResource("StyleBoxFlat_oq3h8")
bus_name = "volume_2"

[node name="pitch_2" type="HSlider" parent="cat_2"]
layout_mode = 0
offset_left = 31.0
offset_top = -31.0
offset_right = 390.0
offset_bottom = -9.0
theme_override_styles/slider = SubResource("StyleBoxFlat_27iny")
max_value = 1.0
step = 0.25

[node name="cat_3" type="Button" parent="."]
offset_left = 825.0
offset_top = 888.0
offset_right = 1255.0
offset_bottom = 1032.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ufxda")
icon = ExtResource("8_mk6tg")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="cat_3"]
stream = ExtResource("13_ys8fg")
bus = &"volume_3"

[node name="HSlider" parent="cat_3" instance=ExtResource("3_cwv5s")]
layout_mode = 0
offset_left = 207.0
offset_top = -145.0
offset_right = 453.0
offset_bottom = -125.0
rotation = -1.5708
theme_override_styles/slider = SubResource("StyleBoxFlat_pqrya")
bus_name = "volume_3"

[node name="pitch_3" type="HSlider" parent="cat_3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = -0.292
anchor_right = 0.009
anchor_bottom = -0.292
offset_left = 24.13
offset_top = 9.048
offset_right = 391.13
offset_bottom = 29.048
theme_override_styles/slider = SubResource("StyleBoxFlat_f3qhf")
max_value = 1.0
step = 0.25

[node name="cat_4" type="Button" parent="."]
offset_left = 1302.0
offset_top = 882.0
offset_right = 1730.0
offset_bottom = 1025.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_iy1jm")
icon = ExtResource("10_nwdit")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="cat_4"]
stream = ExtResource("15_nncfx")
bus = &"volume_4"

[node name="HSlider" parent="cat_4" instance=ExtResource("3_cwv5s")]
layout_mode = 0
offset_left = 297.0
offset_top = -97.0
offset_right = 541.0
offset_bottom = 15.0
rotation = -1.5708
theme_override_styles/slider = SubResource("StyleBoxFlat_q68uh")
bus_name = "volume_4"

[node name="pitch_4" type="HSlider" parent="cat_4"]
layout_mode = 0
offset_left = 17.0
offset_top = -70.0
offset_right = 396.0
offset_bottom = 30.0
theme_override_styles/slider = SubResource("StyleBoxFlat_reslu")
max_value = 1.0
step = 0.25

[node name="drum_beat" type="HSlider" parent="."]
offset_left = 97.0
offset_top = 202.0
offset_right = 536.0
offset_bottom = 258.0
rotation = 1.57227
theme_override_styles/slider = SubResource("StyleBoxFlat_0alnu")
max_value = 1.0
step = 0.001

[node name="drum" type="Button" parent="."]
offset_left = 56.0
offset_top = 60.0
offset_right = 261.0
offset_bottom = 188.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_fvql7")
icon = ExtResource("13_or1yy")

[node name="drum_looper" type="Node2D" parent="."]
script = ExtResource("14_xm7xh")

[node name="Snare-dist01" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("20_dxcxc")

[node name="Hihat-analog" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("19_rb2xc")

[node name="Timer" type="Timer" parent="drum_looper"]
wait_time = 0.2

[node name="exit" type="Button" parent="."]
offset_left = 1803.0
offset_top = 1.0
offset_right = 1920.0
offset_bottom = 126.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_oqbg4")
icon = ExtResource("19_026g5")

[connection signal="pressed" from="cat_2" to="." method="_on_cat_2_pressed"]
[connection signal="value_changed" from="cat_2/pitch_2" to="pitch_slider" method="_on_pitch_2_value_changed"]
[connection signal="pressed" from="cat_3" to="." method="_on_cat_3_pressed"]
[connection signal="value_changed" from="cat_3/pitch_3" to="pitch_slider" method="_on_pitch_3_value_changed"]
[connection signal="pressed" from="cat_4" to="." method="_on_cat_4_pressed"]
[connection signal="value_changed" from="cat_4/pitch_4" to="pitch_slider" method="_on_pitch_4_value_changed"]
[connection signal="value_changed" from="drum_beat" to="drum_looper" method="_on_drum_beat_value_changed"]
[connection signal="button_down" from="drum" to="drum_looper" method="_on_drum_button_down"]
[connection signal="timeout" from="drum_looper/Timer" to="drum_looper" method="_on_timer_timeout"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
